[package]
name = "sev-iocuddle"
version = "0.1.0"
authors = ["Tyler Fanelli <tfanelli@redhat.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iocuddle = "0.1.1"
serde = { version = "1.0", features = ["derive"] }
codicon = "3.0"
