[package]
name = "sev-iocuddle"
version = "0.1.0"
authors = ["Tyler Fanelli <tfanelli@redhat.com>"]
edition = "2018"
exclude = [ ".gitignore", ".github/*" ]
license = "Apache-2.0"
description = "Helpful abstractions for issuing ioctls to AMD SEV platforms"
homepage = "https://github.com/enarx/sev-iocuddle"
repository = "https://github.com/enarx/sev-iocuddle"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iocuddle = "0.1.1"
serde = { version = "1.0", features = ["derive"] }
codicon = "3.0"
