[package]
name = "sev-iocuddle"
version = "0.1.0"
authors = ["Tyler Fanelli <tfanelli@redhat.com>"]
edition = "2018"
exclude = [ ".gitignore", ".github/*" ]
license = "Apache-2.0"
description = "Helpful abstractions for issuing ioctls to AMD SEV platforms"
homepage = "https://github.com/enarx/sev-iocuddle"
repository = "https://github.com/enarx/sev-iocuddle"
readme = "README.md"

[badges]
# See https://doc.rust-lang.org/cargo/reference/manifest.html#the-badges-section
github = { repository = "enarx/sev-iocuddle", workflow = "test" }
#github = { repository = "enarx/sev-iocuddle", workflow = "lint" }
maintenance = { status = "actively-developed" }
is-it-maintained-issue-resolution = { repository = "enarx/sev-iocuddle" }
is-it-maintained-open-issues = { repository = "enarx/sev-iocuddle" }

[dependencies]
iocuddle = "0.1.1"
serde = { version = "1.0", features = ["derive"] }
